FIX: add overflow

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -45,3 +45,7 @@ html {
   margin-top: 50px;
   text-align: center;
 }
+
+.box{
+  overflow-y: scroll;
+}
